refactor popular, upcoming, nowplaying, and toprated enpoints into single category endpoint
